[project]
name = "langchain-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.8.0",
    "langchain>=1.1.2",
    "langchain-anthropic>=1.2.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "langsmith>=0.4.56",
    "python-dotenv>=1.2.1",
]
